# omgmt

./: Cargo.toml  README.md  flake.nix
.idx/: dev.nix
src/: main.rs  model.rs
src/handle/: command.rs  fulfillment.rs  line_item.rs  mod.rs  product.rs
src/model/: fulfillment.rs  line_item.rs  mod.rs  order.rs  product.rs
src/provider/: mod.rs  sqlite.rs
src/service/: fulfillment.rs  line_item.rs  mod.rs  order.rs  product.rs
