[package]
name = "omgmt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-util = "0.2.2"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
